fix: removed visibility-hidden from curtain on hide;

--- a/src/app/components/curtain/curtain.component.scss
+++ b/src/app/components/curtain/curtain.component.scss
@@ -10,6 +10,5 @@
     transform: translate(-50%, 50%);
     transition: 0s;
     pointer-events: none;
-    visibility: hidden;
   }
 }
